--- a/src/components/tag/tag.scss
+++ b/src/components/tag/tag.scss
@@ -10,6 +10,7 @@
   padding: 0px 11.5px;
   height: 26px;
   font-family: $font-primary;
+  transition: background-color 0.5s;
 
   &:hover {
     background-color: var(--color-secondary);
